--- a/styles/scss/plugins/_plugin-react-slick.scss
+++ b/styles/scss/plugins/_plugin-react-slick.scss
@@ -155,6 +155,7 @@ button.slick-arrow.slick-next {
   opacity: 0.5;
 }
 .slick-prev {
+  // display: none;
   left: 0;
   &::before {
     content: "\f053";
@@ -173,6 +174,7 @@ button.slick-arrow.slick-next {
   }
 }
 .slick-next {
+  // display: none;
   right: 0;
   &::before {
     content: "\f054";
@@ -197,7 +199,7 @@ button.slick-arrow.slick-next {
   margin-top: 0;
   margin-bottom: 1rem;
   position: absolute;
-  bottom: 5px;
+  // bottom: 5px;
   // margin-right: 15%;
   // margin-left: 15%;
   width: 100%;
@@ -236,7 +238,7 @@ button.slick-arrow.slick-next {
     content: "\2022";
     text-align: center;
     opacity: 1;
-    background-color: #fff;
+    background-color: #F5F5F5;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
