--- a/styles/scss/core/_misc.scss
+++ b/styles/scss/core/_misc.scss
@@ -128,3 +128,7 @@ img {
 form {
   margin-bottom: 1.125rem;
 }
+.input-container {
+  display: flex;
+  align-items: center; /* Center items vertically */
+}
