--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @font-face {
     font-family: satoshi;
     src: url(../../public/fonts/Satoshi-Black.woff);
